@@ -277,8 +277,11 @@ MySQL_ResultSetMetaData::isCaseSensitive(unsigned int columnIndex)
 		if (columnIndex == 0 || columnIndex > mysql_num_fields(result->get())) {
 			throw sql::InvalidArgumentException("Invalid value for columnIndex");
 		}
-		const CHARSET_INFO * const cs =
-			get_charset(mysql_fetch_field_direct(result->get(), columnIndex - 1)->charsetnr, MYF(0));
+		const MYSQL_FIELD * const field = mysql_fetch_field_direct(result->get(), columnIndex - 1);
+		if (field->flags & NUM_FLAG || field->type == MYSQL_TYPE_NEWDECIMAL || field->type == MYSQL_TYPE_DECIMAL) {
+			return false;
+		}
+		const CHARSET_INFO * const cs = get_charset(field->charsetnr, MYF(0));
 		return NULL == strstr(cs->name, "_ci");
 	}
 	throw sql::InvalidArgumentException("ResultSet is not valid anymore");
